--- a/denon.html
+++ b/denon.html
@@ -11,7 +11,7 @@
 		</div>
 		<div>
 			<h2>Volume</h2>
-			<input type="range" id="volumeControl" min="-80" max="20" value="-40" onchange="volumeChanged()"/></td>
+			<input type="range" id="volumeControl" min="-80" max="20" onchange="volumeChanged()"/></td>
 		</div>
 		<div>
 			<h2>Input</h2>
@@ -111,5 +111,6 @@
 			    </tr>
 			</table
 		</div>  
+	<script> init() </script>
 	</body>
 </html>
